--- a/fast_reid/configs/AICUP/bagtricks_R50-ibn.yml
+++ b/fast_reid/configs/AICUP/bagtricks_R50-ibn.yml
@@ -22,8 +22,10 @@ DATASETS:
 SOLVER:
   BIAS_LR_FACTOR: 1.
 
-  IMS_PER_BATCH: 256
-  MAX_EPOCH: 60
+  # IMS_PER_BATCH: 256
+  IMS_PER_BATCH: 32
+  # MAX_EPOCH: 60
+  MAX_EPOCH: 30
   STEPS: [30, 50]
   WARMUP_ITERS: 2000
 
@@ -31,6 +33,7 @@ SOLVER:
 
 TEST:
   EVAL_PERIOD: 60 # We didn't provide eval dataset
-  IMS_PER_BATCH: 256
+  # IMS_PER_BATCH: 256
+  IMS_PER_BATCH: 32
 
 OUTPUT_DIR: logs/AICUP_115/bagtricks_R50-ibn
